<resources>
    <string name="app_name">Bible Reading Companion</string>
    <string name="title_home">Home</string>
    <string name="title_reading">Reading</string>
    <string name="title_comments">Comments</string>
    <string name="title_date">Date</string>
    <string name="title_map">Map</string>
    <string name="title_commandment">Commandments of Christ</string>
    <string name="body_commandment">Commandment</string>
    <string name="ref_commandment">References</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiamFrZW1hZGRlbiIsImEiOiJkYUhBc1hjIn0.4vetwHUj0d9PQAzxvGrxgg</string>
    <string name="mapbox_style_custom_bible">mapbox://styles/jakemadden/cjo3z4v16dju92so6jswmuffb</string>
    <string name="title_commandment_widget">Commandments Of Christ</string>
    <string name="title_readings_widget">Daily Readings</string>
    <string name="title_learning">Learn the Basics</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Example settings for Reading -->
    <string name="pref_header_reading">Reading</string>
    <string name="pref_title_reading_translation">Translation</string>
    <string name="pref_title_paragraph">Paragraphs</string>
    <string name="pref_description_paragraph">Display verses in paragraphs</string>

    <string-array name="reading_translation_entries">
        <item>KJV</item>
        <item>ESV</item>
        <item>NET</item>
    </string-array>

    <string-array name="reading_translation_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
