<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/pref_header_reading">

        <ListPreference
            android:defaultValue="ESV"
            android:entries="@array/reading_translation_entries"
            android:entryValues="@array/reading_translation_entries"
            android:key="translation"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_reading_translation" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="paragraphs"
            android:summary="@string/pref_description_paragraph"
            android:title="@string/pref_title_paragraph" />
    </PreferenceCategory>


</PreferenceScreen>
